<!-- activity_second.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appName"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:paddingStart="8dp"

        android:fontFamily="@font/venus_cormier"
        android:text="@string/appName"
        android:textColor="@color/accent_0"
        android:textSize="96sp"
        android:gravity="center_vertical|start"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="256dp"
        android:layout_height="256dp"

        android:contentDescription="@string/appLogoDescription"
        android:src="@mipmap/mia_launcher_foreground"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/buttonNext"

        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"

        android:layout_width="64dp"
        android:layout_height="64dp"

        app:iconSize="32dp"
        android:backgroundTint="@color/accent_0"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        android:contentDescription="@string/nextButton"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>